--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8" />
     <title>Unit 5 - Nav Bar</title>
     <style>
-      ul{
+       ul{
         list-style-type: none;
         margin:0;
         padding:0;
@@ -29,7 +29,6 @@
         padding: 10px;
         background-color: lightblue;
         color:white;
-      }
     </style>
   </head>
   <body>
@@ -40,7 +39,7 @@
       <li><a href="about.html">About</a></li>
     </ul>
 
-    <h1>Home</h1>
+    <h1>News</h1>
 
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
